--- a/maestro/base.yaml
+++ b/maestro/base.yaml
@@ -20,8 +20,8 @@ grpc-server:
   host: 0.0.0.0
 
 opentelemetry:
-  enabled: false
-  endpoint: otel-collector:4317
+  enabled: true
+  endpoint: localhost:4317
   insecure: true
   interval: 20
   metrics:
