--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     profiles:
       - services
     deploy:
-      replicas: 1
+      replicas: 3
       mode: replicated
       endpoint_mode: vip
       labels:
@@ -72,8 +72,8 @@ services:
       args:
         - package_name=maestro
     ports:
-      # Allow at most 5 replicas
-      - 7777-7782:7777
+      # Allow at most 10 replicas
+      - 7777-7787:7777
     networks:
       - otel
       - services
@@ -104,8 +104,8 @@ services:
       args:
         - package_name=panettiere
     ports:
-      # Allow at most 5 replicas
-      - 8888-8893:8888
+      # Allow at most 10 replicas
+      - 8888-8898:8888
     environment:
       PANETTIERE_OPENTELEMETRY_ENDPOINT: otel-collector:4317
     networks:
@@ -126,6 +126,17 @@ services:
         reservations:
           cpus: "0.10"
           memory: 20M
+
+  tifosi-load:
+    build:
+      context: ./tifosi-load/
+      dockerfile: ./Dockerfile
+    environment:
+      PADDOCK_GATEWAY: http://paddock-gateway:8080
+    networks:
+      - services
+    profiles:
+      - load
 
 networks:
   otel:
